Responsive further fixes, not horizontal scrolling in Kanji is imposible in low width if you want it readable in Windows.

--- a/style.css
+++ b/style.css
@@ -24,3 +24,6 @@ label.kun-reading {
 label.meaning {
     background: green;
 }
+button.kanji-button label {
+    font-size: 1rem;
+}
